--- a/site/index.html
+++ b/site/index.html
@@ -166,7 +166,7 @@ p {
 <h1>Responsive Layout</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-3 col-sd-6"><p><span>Chiken</span>The chicken (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl.</p></div>
+  <div class="col-lg-3 col-md-3 col-sd-6"><div col- class="title"><span>Chikennnnn</span></div><p>The chicken (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl.</p></div>
   <div class="col-lg-3 col-md-3 col-sd-6"><p>Beef</p><p>Beef is the culinary name for meat from cattle. Beef can be harvested from bulls, heifers or steers.</p></div>
   <div class="col-lg-3 col-md-3 col-sd-6"><p>Sushi</p><p>Sushi (すし, 寿司, 鮨) is a type of food preparation originating in Japan, consisting of cooked vinegared rice (鮨飯, sushi-meshi) combined with other ingredients...</p></div>
 </div>
