--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Menu</title>
-<link rel="stylesheet" type="text/css" href="stylesheets/site/stylesheet.css" media="screen">
+<link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet1.css" media="screen">
 </head>
 <body>
 <h1>Our Menu</h1>
